--- a/.github/workflows/label_owner_pullrequest.yml
+++ b/.github/workflows/label_owner_pullrequest.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ (github.event.pull_request.user.login == 'jge162') }}
     steps:
-    - uses: actions/labelers@v4
+    - uses: actions/labeled@v4
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
         configuration-path: .github/labelers.yml
