--- a/.github/workflows/label_owner_pullrequest.yml
+++ b/.github/workflows/label_owner_pullrequest.yml
@@ -1,4 +1,4 @@
-name: Label owner pullrequest
+name: Label owner 
 on:
   pull_request_target
 
@@ -13,6 +13,6 @@ jobs:
     - uses: actions/labelers@v4
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
-        configuration-path: .github/labelers.yml
+        configuration-path: .github/labeled.yml
         # correct path to point label on pull.yml
         sync-labels: false
