--- a/.github/workflows/label_on_pullrequest.yml
+++ b/.github/workflows/label_on_pullrequest.yml
@@ -1,4 +1,5 @@
-name: Label on pullrequest
+name: Label on Pull 
+
 on:
   pull_request_target
 
@@ -8,11 +9,18 @@ jobs:
       contents: read
       pull-requests: write
     runs-on: ubuntu-latest
-    if: ${{ (github.event.pull_request.user.login != 'jge162') }}
     steps:
-    - uses: actions/labelers@v4
+    - name: Label owner
+      if: ${{ (github.event.pull_request.user.login == 'jge162') }}
+      uses: actions/labelers@v4
+      with:
+        repo-token: "${{ secrets.GITHUB_TOKEN }}"
+        configuration-path: .github/labeled.yml
+        sync-labels: false
+    - name: Label not owner
+      if: ${{ (github.event.pull_request.user.login != 'jge162') }}
+      uses: actions/labelers@v4
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
         configuration-path: .github/labelers.yml
-        # correct path to point label on pull.yml
         sync-labels: false
