--- a/.github/workflows/label_on_pullrequest.yml
+++ b/.github/workflows/label_on_pullrequest.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Debug information
-      run: echo "User login: ${{ github.event.pull_request.user.login }}"
+      run: |
+        echo "User login: ${{ github.event.pull_request.user.login }}"
     - name: Label owner
       if: ${{ (github.event.pull_request.user.login == 'jge162') }}
       uses: actions/labelers@v4
