--- a/action.yaml
+++ b/action.yaml
@@ -63,20 +63,20 @@ inputs:
     default: 1
   lfs:
     description: 'Whether to download Git-LFS files'
-    default: false
+    default: true
   submodules:
     description: >
       Whether to checkout submodules: `true` to checkout submodules or `recursive` to
       recursively checkout submodules.
       When the `ssh-key` input is not provided, SSH URLs beginning with `git@github.com:` are
       converted to HTTPS.
-    default: false
+    default: true
   set-safe-directory:
     description: Add repository path as safe.directory for Git global config by running `git config --global --add safe.directory <path>`
     default: true
   github-server-url:
     description: The base URL for the GitHub instance that you are trying to clone from, will use environment defaults to fetch from the same instance that the workflow is running from unless specified. Example URLs are https://github.com or https://my-ghes-server.example.com
-    required: false
+    required: true
 runs:
   using: node16
   main: dist/index.js
