--- a/.github/workflows/owner_auto-merge.yml
+++ b/.github/workflows/owner_auto-merge.yml
@@ -1,4 +1,4 @@
-name: auto-merge
+name: owner auto-merge
 on: pull_request
 
 permissions:
@@ -28,4 +28,4 @@ jobs:
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.WORKFLOW_SECRET
+          GITHUB_TOKEN: ${{secrets.WORKFLOW_SECRET}}
