--- a/.github/workflows/python_check.yml
+++ b/.github/workflows/python_check.yml
@@ -17,9 +17,12 @@ jobs:
       uses: jge162/Action-workflows@main
 
     - run: |
-        echo "Install required dependencies"
-        sudo apt-get update
-        sudo apt-get install python3
+       echo "Install required dependencies"
+       sudo apt-get update
+       sudo apt-get install python3
+       echo "Install PyGithub module"
+       pip3 install PyGithub
+      shell: bash
 
     - run: |
         echo "Run, Build Application using scripts"
