--- a/.github/workflows/owner_auto-merge.yml
+++ b/.github/workflows/owner_auto-merge.yml
@@ -19,3 +19,9 @@ jobs:
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
           GITHUB_TOKEN: ${{secrets.WORKFLOW_SECRET}}
+      - name: Add label
+        uses: actions/labeler@v3
+        with:
+          repository: ${{ github.repository }}
+          pull-request-number: ${{ github.event.number }}
+          labels: automerge
