--- a/.github/workflows/owner_auto-merge.yml
+++ b/.github/workflows/owner_auto-merge.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Add label
         uses: actions/labeler@v3
         with:
-          repository: ${{ github.repository }}
-          pull-request-number: ${{ github.event.number }}
-          labels: automerge
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+          configuration-path: .github/labeler_automerge.yml
+          sync-labels: false
