--- a/.github/workflows/owner_auto-merge.yml
+++ b/.github/workflows/owner_auto-merge.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Add label
         uses: actions/labeler@v3
         with:
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+          repo-token: "${{ secrets.WORKFLOW_SECRET }}"
           configuration-path: .github/labeler_automerge.yml
           sync-labels: false
