--- a/.github/workflows/owner_auto-merge.yml
+++ b/.github/workflows/owner_auto-merge.yml
@@ -28,11 +28,36 @@ jobs:
             with open(script, 'r') as file:
                 exec(file.read())
         "
-        
+ 
+ Javascript-analyze:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Install Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '16'
+
+    - name: Install jshint
+      run: npm install -g jshint
+
+    - name: Script Error Results Here!
+      run: |
+        echo "Build application script outputs Here!"
+        python3 -c "
+        scripts = ['python_java_tester.py']
+        for script in scripts:
+            with open(script, 'r') as file:
+                exec(file.read())
+        "
+               
  auto-merge:
     runs-on: ubuntu-latest
     if: ${{ github.actor == 'jge162' }}
-    needs: build-and-analyze
+    needs: [build-and-analyze, Javascript-analyze]
     steps:
       - name: Auto_merge
         uses: jge162/Action-workflows@main
@@ -42,5 +67,5 @@ jobs:
         run: gh pr merge --auto --merge "$PR_URL"
         env:
           PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.WORKFLOW_SECRET}}
+          repo-token: ${{secrets.WORKFLOW_SECRET}}
  
