--- a/.github/workflows/changelog_enforcer.yml
+++ b/.github/workflows/changelog_enforcer.yml
@@ -2,8 +2,8 @@ name: Changelog Automation
 
 on:
   push:
-    branches:
-      - main
+    #branches:
+     # - main
       # - release/**
 
 jobs:
