--- a/.github/workflows/changelog_enforcer.yml
+++ b/.github/workflows/changelog_enforcer.yml
@@ -2,9 +2,9 @@ name: Changelog Automation
 
 on:
   push:
-    #branches:
-     # - main
-      # - release/**
+    branches:
+      - main
+      - release/**
 
 jobs:
   update-changelog:
