--- a/.github/workflows/changelog_enforcer.yml
+++ b/.github/workflows/changelog_enforcer.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-      - release/**
+      #- release/**
 jobs:
   update-changelog:
     runs-on: ubuntu-latest
