--- a/.github/workflows/periodic_pull_request.yml
+++ b/.github/workflows/periodic_pull_request.yml
@@ -1,6 +1,6 @@
 on:
   schedule:
-   - cron: '0 10 * * *'
+    - cron: '0 10 * * *'
 name: create-pull-request workflow
 jobs:
   createPullRequest:
@@ -12,7 +12,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.WORKFLOW_SECRET }}
           commit-message: Add report file
           title: '[Example] Add report file'
           body: >
