--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-      day: "00:00"
+      time: "00:00"
     ignore:
       - dependency-name: "*"
         update-types: ["version-update:semver-major"]
