--- a/.github/workflows/periodic_pull_request.yml
+++ b/.github/workflows/periodic_pull_request.yml
@@ -1,8 +1,7 @@
 name: create-pull-request workflow
 on:
-  push:
-  # schedule:
-  #  - cron: '0 10 * * *'
+   schedule:
+    - cron: '0 10 * * *'
 
 jobs:
   createPullRequest:
