--- a/.github/workflows/periodic_pull_request.yml
+++ b/.github/workflows/periodic_pull_request.yml
@@ -1,8 +1,8 @@
 name: create-pull-request workflow
 on:
   schedule:
-    - cron: '0 10 * * *'
-
+    - cron: '10 16 * * *' 
+    # run every day at 4:10 pm
 jobs:
   createPullRequest:
     runs-on: ubuntu-latest
