--- a/.github/workflows/periodic_pull_request.yml
+++ b/.github/workflows/periodic_pull_request.yml
@@ -1,7 +1,9 @@
 name: create-pull-request workflow
 on:
-  schedule:
-    - cron: '15 16 * * *' 
+  push:
+  
+  #schedule:
+  #  - cron: '15 16 * * *' 
     # run every day at 4:10 pm
 jobs:
   createPullRequest:
