--- a/.github/workflows/periodic_pull_request.yml
+++ b/.github/workflows/periodic_pull_request.yml
@@ -1,7 +1,7 @@
 name: create-pull-request workflow
 on:  
   schedule:
-    - cron: '5 0,12 * * *' 
+    - cron: '*/5 1-20 * * *' 
     # run every day at 4:10 pm
 jobs:
   createPullRequest:
