--- a/.github/workflows/create_release_minor.yml
+++ b/.github/workflows/create_release_minor.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
-    if: github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'create release major') && github.event.pull_request.user.login == 'jge162'
+    if: github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'create release minor') && github.event.pull_request.user.login == 'jge162'
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
