--- a/.github/workflows/create_release_minor.yml
+++ b/.github/workflows/create_release_minor.yml
@@ -1,4 +1,3 @@
-
 name: Release on Pull Request Close
 
 on:
@@ -12,33 +11,33 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-        # uses: jge162/Action-workflows@v0.0.6
+
       - name: Build and test code
         run: |
           # Build and test code here
+
       - name: Get latest tag
         run: |
           git fetch --tags
           echo "::set-output name=latest_tag::$(git describe --tags $(git rev-list --tags --max-count=1))"
         id: get_latest_tag
-      - name: Bump minor version #v1.1.0 will increase to v2.2.0
+
+      - name: Bump minor version
         run: |
           semver=$(echo "${{ steps.get_latest_tag.outputs.latest_tag }}")
           major=$(echo $semver | cut -d'.' -f1)
           minor=$(echo $semver | cut -d'.' -f2)
           patch=$(echo $semver | cut -d'.' -f3)
-          new_patch=$((patch+1))
-          new_tag="$major.$minor.$new_patch"
+          new_minor=$((minor+1))
+          new_tag="$major.$new_minor.$patch"
           echo "::set-output name=new_tag::$new_tag"
         id: bump_version
+
       - name: Create release
-        # uses: softprops/action-gh-release@v1
-        uses: jge162/create-release@main
+        uses: actions/create-release@v1
         with:
-          files: |
-            build/*
           tag_name: ${{ steps.bump_version.outputs.new_tag }}
-          body: |
-            This is a new release ${{ steps.bump_version.outputs.new_tag }} which will include feature updates. 
+          release_name: Release ${{ steps.bump_version.outputs.new_tag }}
+          body: This is a new release ${{ steps.bump_version.outputs.new_tag }} which will include bug fixes and minor updates.
         env:
-          GITHUB_TOKEN: ${{ secrets.WORKFLOW_SECRET }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
