--- a/.github/workflows/periodic_pull_request.yml
+++ b/.github/workflows/periodic_pull_request.yml
@@ -1,8 +1,8 @@
 name: create-pull-request workflow
-on:  
+on:
   schedule:
-    - cron: '*/5 1-20 * * *' 
-    # run every day at 4:10 pm
+  - cron: '0 0,12 * * *' 
+    # action will run everyday at 12 am and 12 pm
 jobs:
   createPullRequest:
     runs-on: ubuntu-latest
