--- a/.github/workflows/create_release_patch.yml
+++ b/.github/workflows/create_release_patch.yml
@@ -5,7 +5,7 @@ on:
     types: [closed]
 
 jobs:
-  build-and-release:
+  create_release_patch:
     runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true && contains(github.event.pull_request.labels.*.name, 'create release patch') && github.event.pull_request.user.login == 'jge162'
     steps:
