--- a/.github/workflows/release_changelog_enforcer.yml
+++ b/.github/workflows/release_changelog_enforcer.yml
@@ -2,7 +2,7 @@ name: 'Update Changelog'
 
 on:
     release:
-        types: [released]
+        types: [created, edited, published, released]
 
 jobs:
     update:
