--- a/.github/workflows/changelog_enforcer.yml
+++ b/.github/workflows/changelog_enforcer.yml
@@ -64,7 +64,7 @@ jobs:
       - if: failure()
         uses: unsplash/comment-on-pr@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_SECRET }}
         with:
           check_for_duplicate_msg: true
           msg: |
@@ -89,7 +89,7 @@ jobs:
       - if: ${{ steps.check_release.outputs.missing == 'true' }}
         uses: unsplash/comment-on-pr@master
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.WORKFLOW_SECRET }}
         with:
           check_for_duplicate_msg: true
           msg: |
