--- a/.github/workflows/changelog_enforcer.yml
+++ b/.github/workflows/changelog_enforcer.yml
@@ -1,34 +1,33 @@
+name: Update Changelog
+
 on:
   push:
-    # Sequence of patterns matched against refs/tags
     tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-
-name: Create Release
+      - 'v*'
 
 jobs:
-  build:
-    name: Create Release
+  changelog:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      
-      - run: git fetch --prune --unshallow --tags
 
-      - name: Create changelogs
-        id: changelogs
-        uses: heineiuo/create-changelogs@master # 👀
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@latest
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Enforce changelog entry
+        uses: dangoslen/changelog-enforcer@v3
         with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          body: ${{ steps.changelogs.outputs.changelogs }}
-          draft: false
-          prerelease: ${{ steps.changelogs.outputs.release_type == 'prerelease' }}
+          changeLogPath: 'CHANGELOG.md'
+          expectedLatestVersion: '${{ github.ref }}'
 
+      - name: Update changelog file
+        uses: actions/github-script@v3
+        with:
+          script: |
+            const fs = require('fs');
+            const changelogEntry = `## [${{ github.ref }}] - ${new Date().toISOString().split('T')[0]}\n\n${{ steps.changelog.outputs.changelog }}\n`;
+            fs.appendFileSync('CHANGELOG.md', changelogEntry);
+
+          # Set the token for authentication to the GitHub API
+          # It is recommended to use a Personal Access Token with the 'repo' scope instead of the default GITHUB_TOKEN
+          # This is because GITHUB_TOKEN does not have the permissions to push changes to the repository
+          # See https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token for instructions on how to create a Personal Access Token
+          token: ${{ secrets.GITHUB_TOKEN }}
