--- a/.github/workflows/changelog_enforcer.yml
+++ b/.github/workflows/changelog_enforcer.yml
@@ -1,36 +1,34 @@
-
-name: Changelog enforcer
+name: "Update Changelog"
 
 on:
-  pull_request:
-    types: [opened, reopened, synchronize, labeled, unlabeled]
+  release:
+    types: [released]
 
 jobs:
-  add-changelog-entry:
+  update:
     runs-on: ubuntu-latest
+
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # updaetd CHANGELOG back to the repository.
+      # https://github.blog/changelog/2023-02-02-github-actions-updating-the-default-github_token-permissions-to-read-only/
+      contents: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          ref: main
 
-      - name: Get pull request details
-        id: get_pr
-        run: |
-          echo ::set-output name=pr_number::${{ github.event.pull_request.number }}
-          echo ::set-output name=pr_title::${{ github.event.pull_request.title }}
-          echo ::set-output name=pr_author::${{ github.event.pull_request.user.login }}
-
-      - name: Append to changelog file
-        run: |
-          echo "## PR #${{ steps.get_pr.outputs.pr_number }}: ${{ steps.get_pr.outputs.pr_title }} [${{ steps.get_pr.outputs.pr_author }}]" >> changelog.md
-          echo "" >> changelog.md
-
-      - name: Commit changes
+      - name: Update Changelog
         uses: stefanzweifel/changelog-updater-action@v1
         with:
-          commit_message: "Update changelog with PR details"
-          commit_options: "--no-gpg-sign"
-          commit_user_name: "GitHub Action"
-          commit_user_email: "action@github.com"
-          file_pattern: changelog.md
-        env:
-          GITHUB_TOKEN: ${{ secrets.WORKFLOW_SECRET }}
+          release-notes: ${{ github.event.release.body }}
+          latest-version: ${{ github.event.release.name }}
+
+      - name: Commit updated CHANGELOG
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          branch: main
+          commit_message: Update CHANGELOG
+          file_pattern: CHANGELOG.md
