--- a/.github/workflows/changelog_enforcer.yml
+++ b/.github/workflows/changelog_enforcer.yml
@@ -1,44 +1,36 @@
-name: Pull Request Changelog
+name: "Update Changelog"
 
 on:
-  pull_request:
-    types: [opened, reopened, synchronize, labeled, unlabeled]
-
+  push:
+    # types: [opened, reopened, synchronize, labeled, unlabeled]
+    
 jobs:
-  get-latest-version:
+  update:
     runs-on: ubuntu-latest
+
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # updaetd CHANGELOG back to the repository.
+      # https://github.blog/changelog/2023-02-02-github-actions-updating-the-default-github_token-permissions-to-read-only/
+      contents: write
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          ref: main
 
-      - name: Extract latest version from changelog
-        id: latest_version
-        run: |
-          latest_version=$(grep -E '## [vV]?[0-9]+\.[0-9]+\.[0-9]+(-.*)?' CHANGELOG.md | head -n 1 | awk -F'[][]' '{print $2}')
-          echo "::set-output name=latest_version::${latest_version}"
-
-  add-changelog-entry:
-    needs: [get-latest-version]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Get pull request details
-        id: get_pr
-        run: |
-          echo ::set-output name=pr_number::${{ github.event.pull_request.number }}
-          echo ::set-output name=pr_title::${{ github.event.pull_request.title }}
-          echo ::set-output name=pr_author::${{ github.event.pull_request.user.login }}
-
-      - name: Update changelog file
+      - name: Update Changelog
         uses: stefanzweifel/changelog-updater-action@v1
         with:
           path-to-changelog: CHANGELOG.md
-          latest-version: ${{ needs.get-latest-version.outputs.latest_version }}
+          latest-version: v1.0.1 # Replace with the latest version of your software
           release-notes: |
             ### PR #${{ steps.get_pr.outputs.pr_number }}: ${{ steps.get_pr.outputs.pr_title }} [${{ steps.get_pr.outputs.pr_author }}]
 
-            # Describe the changes made in the pull request here
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Commit updated CHANGELOG
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          branch: main
+          commit_message: Update CHANGELOG
+          file_pattern: CHANGELOG.md
