--- a/.github/workflows/changelog_enforcer.yml
+++ b/.github/workflows/changelog_enforcer.yml
@@ -32,9 +32,9 @@ jobs:
       - name: Update Changelog
         uses: stefanzweifel/changelog-updater-action@v1
         with:
-          path-to-changelog: CHANGELOG.md
-          latest-version: ${{ steps.get_latest_version.outputs.latest_version }} # Use the latest version obtained from the previous step
-          release-notes: |
+         path-to-changelog: CHANGELOG.md
+         latest-version: ${{ steps.get_latest_version.outputs.latest_version }}
+         release-notes: |
 
       - name: Commit updated CHANGELOG
         uses: stefanzweifel/git-auto-commit-action@v4
