--- a/.github/workflows/changelog_enforcer.yml
+++ b/.github/workflows/changelog_enforcer.yml
@@ -10,7 +10,7 @@ jobs:
 
     permissions:
       # Give the default GITHUB_TOKEN write permission to commit and push the
-      # updaetd CHANGELOG back to the repository.
+      # updated CHANGELOG back to the repository.
       # https://github.blog/changelog/2023-02-02-github-actions-updating-the-default-github_token-permissions-to-read-only/
       contents: write
 
@@ -26,15 +26,15 @@ jobs:
           git fetch --tags
           latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1))
           latest_version=${latest_tag#v}
-          echo "::set-input name=latest_version::$latest_version"
+          echo "::set-output name=latest_version::$latest_version"
         shell: bash
 
       - name: Update Changelog
         uses: stefanzweifel/changelog-updater-action@v1
         with:
-         path-to-changelog: CHANGELOG.md
-         latest-version: ${{ steps.get_latest_version.outputs.latest_version }}
-         release-notes: |
+          path-to-changelog: CHANGELOG.md
+          latest-version: ${{ steps.get_latest_version.outputs.latest_version }}
+          release-notes: |
 
       - name: Commit updated CHANGELOG
         uses: stefanzweifel/git-auto-commit-action@v4
