--- a/.github/workflows/changelog_enforcer.yml
+++ b/.github/workflows/changelog_enforcer.yml
@@ -1,8 +1,8 @@
 name: "Update Changelog"
 
 on:
-  push:
-    # types: [opened, reopened, synchronize, labeled, unlabeled]
+  pull_request:
+    types: [opened, reopened, synchronize, labeled, unlabeled]
     
 jobs:
   update:
