--- a/.github/workflows/create_release_minor.yml
+++ b/.github/workflows/create_release_minor.yml
@@ -41,3 +41,43 @@ jobs:
           body: This is a new release ${{ steps.bump_version.outputs.new_tag }} which will include bug fixes and minor updates.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  update:
+    runs-on: ubuntu-latest
+    needs: [create_release_minor]
+
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # updated CHANGELOG back to the repository.
+      # https://github.blog/changelog/2023-02-02-github-actions-updating-the-default-github_token-permissions-to-read-only/
+      contents: write
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+        with:
+          ref: main
+
+      - name: Get latest version
+        id: get_latest_version
+        run: |
+          git fetch --tags
+          latest_tag=$(git describe --tags $(git rev-list --tags --max-count=1))
+          latest_version=${latest_tag#v}
+          echo "::set-output name=latest_version::$latest_version"
+        shell: bash
+
+      - name: Update Changelog
+        uses: stefanzweifel/changelog-updater-action@v1
+        with:
+          path-to-changelog: CHANGELOG.md
+          latest-version: ${{ steps.get_latest_version.outputs.latest_version }}
+          release-notes: |
+           This update is being logged by Change log enforcer.
+           
+      - name: Commit updated CHANGELOG
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          branch: main
+          commit_message: Update CHANGELOG
+          file_pattern: CHANGELOG.md
