--- a/.github/workflows/create_release_patch.yml
+++ b/.github/workflows/create_release_patch.yml
@@ -43,7 +43,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.WORKFLOW_SECRET }}
           
-  update:
+  ChangeLog_Enforcer:
     runs-on: ubuntu-latest
     needs: [create_release_patch]
 
